k8s-manifests/deploymentV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopperv2
  namespace: t20
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopper
      version: v2
  template:
    metadata:
      labels:
        app: shopper
        version: v2
    spec:
      serviceAccountName: shopper
      containers:
        - image: shopper:2.0
          name: shopper
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
