k8s-manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: t20
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: shopper
  namespace: t20
  labels:
    app: shopper
    service: shopper
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: shopper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopper
  namespace: t20
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopper
      version: v1
  template:
    metadata:
      labels:
        app: shopper
        version: v1
    spec:
      serviceAccountName: shopper
      containers:
        - image: shopper:1.0
          name: shopper
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
