k8s-manifests/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shopper
  namespace: t20
spec:
  host: shopper
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
