k8s-manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopper
spec:
  hosts:
    - shopper
  http:
    - route:
        - destination:
            host: shopper
            subset: v1
          weight: 80
        - destination:
            host: shopper
            subset: v2
          weight: 20
